compiler/testData/diagnostics/tests/nullableTypes/redundantNullableInSupertype.fir.kt
interface A
interface X: A?<!NULLABLE_SUPERTYPE!>?<!> {

}

fun <T> interaction(t: T) {
    if (t == null) {}

}